<resources>
    <string name="app_name">MiFilMo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="required">Required.</string>
    <string name="error_password_length">The password should be at least 6 character.</string>
    <string name="error_email_format">The email address is badly formatted.</string>
    <string name="error_authentication">Error, Authentication failed.</string>
    <string name="error_register">Error, Register failed.</string>
    <string name="content_description_loading">Loading</string>
    <string name="user_image">User image</string>
    <string name="name">Name</string>
    <string name="error_min_name_length">The name should be at least 2 character.</string>
    <string name="error_max_name_length">The name should be a maximum 15 character.</string>

    <string name="theme">Theme</string>
    <string name="overview">Overview</string>
    <string name="language">Language</string>
    <string name="my_films">My films</string>
    <string name="all">All films</string>
    <string name="image_movie">Movie</string>
    <string name="people">People</string>
    <string name="cast">Cast</string>
    <string name="image_timer">Timer</string>
    <string name="application_header">Application</string>
    <string name="title_activity_settings">Settings</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="empty_favorite_image">Empty favorite image</string>
    <string name="empty_favorite">You have not selected any favorite movie yet</string>
    <string name="favorite">Favorites</string>
    <string name="profile_image">Profile image</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Logout</string>
    <string name="delete_account_info">This action will delete your account and all information related to it.</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="biography">Biography</string>
    <string name="known_for_department">Known for</string>
    <string name="data">Datos</string>
    <string name="all_messages">All messages</string>
    <string name="my_messages">My messages</string>
    <string name="push_message">Push message</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">Movie message updates</string>
    <string name="fcm_message_title">New message</string>
    <string name="fcm_message_description">"%s has written a new message"</string>
</resources>