<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/application_header">

        <ListPreference
            app:defaultValue="MODE_NIGHT_FOLLOW_SYSTEM"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="preference_theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/data">

        <ListPreference
            app:defaultValue="es"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="preference_language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>