<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/movie_detail_scene"
    tools:motionDebug="SHOW_PATH"
    tools:showPaths="true">

    <ImageView
        android:id="@+id/toolbarImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@android:id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:src="@drawable/abc_ic_ab_back_material"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/titleBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <RatingBar
        android:id="@+id/rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_xsmall"
        android:numStars="5"
        android:stepSize="0.1"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:theme="@style/RatingBar"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintStart_toStartOf="@+id/title"
        tools:rating="3" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_xsmall"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@id/rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cover"
        tools:text="klsd jflaksdj lfkjasld string sadfasdf asdf asd f" />

    <ImageView
        android:id="@+id/imageTimer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/image_timer"
        android:src="@drawable/ic_timer"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@id/time" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarImage"
        app:layout_constraintStart_toEndOf="@+id/imageTimer"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/image_movie"
        app:layout_constraintBottom_toTopOf="@id/titleBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleBackground"
        tools:src="@drawable/mandalorian" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarImage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_medium">

            <TextView
                android:id="@+id/overviewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:text="@string/app_name"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overviewTitle" />


            <TextView
                android:id="@+id/castTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:text="@string/cast"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/castTitle"
                tools:listitem="@layout/item_people" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/peopleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="castTitle,recyclerPeople" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>