<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="?attr/colorPrimaryVariant"
            app:title="asdfasdf">

            <com.jrodriguezva.mifilmo.ui.commons.SquareImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_image"
                android:fitsSystemWindows="false"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:titleTextColor="?attr/colorOnPrimary" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_padding_size_medium">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/biographyCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_padding_size_medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/biographyTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/margin_padding_size_small"
                        android:text="@string/biography"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <TextView
                        android:id="@+id/biography"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_padding_size_small"
                        android:drawablePadding="@dimen/margin_padding_size_small"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="@tools:sample/lorem/random" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_size_medium">

                    <TextView
                        android:id="@+id/nameTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_padding_size_small"
                        android:text="@string/name"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_padding_size_small"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameTitle"
                        tools:text="@tools:sample/full_names" />

                    <TextView
                        android:id="@+id/birthdayTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_size_xsmall"
                        android:text="@string/birthday"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintEnd_toEndOf="@+id/name"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <TextView
                        android:id="@+id/birthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="@+id/name"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/birthdayTitle"
                        tools:text="@tools:sample/us_phones" />

                    <TextView
                        android:id="@+id/placeOfBirthTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_padding_size_xsmall"
                        android:text="@string/place_of_birth"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintEnd_toEndOf="@+id/name"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/birthday" />

                    <TextView
                        android:id="@+id/placeOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="@+id/name"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/placeOfBirthTitle"
                        tools:text="@tools:sample/first_names" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
